--- a/css/variables.css
+++ b/css/variables.css
@@ -11,7 +11,7 @@
 
     /*texto*/
     --color-text-primary: #2b2b2b;
-    --color-text-secondary: #6b6b6b;
+    --color-text-secondary: #4a4a4a;
     --color-text-light: #ffffff;
 
     /*fundos*/
